FindBugs report fixes
Blah, -ETOOMANYREPORTS. Torn down a bunch of them.

git-svn-id: https://arran.fi.muni.cz/svn/stanse/trunk@827 98efdb2a-0913-0410-9d53-f03ad6a1d54d